--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
 </head>
 <body>
 
-<h1 class="title">💛 Feliz Día de las Flores Amarillas 💛</h1>
-<p class="subtitle">Un detalle algo simple, espero te guste🌼</p>
-<p class="subtitle">(Le pedí ayuda a ChatGPT)🌼</p>
+<div class="content">
+  <h1 class="title">💛 Feliz Día de las Flores Amarillas 💛</h1>
+  <p class="subtitle">Un detalle algo simple, espero te guste🌼</p>
+  <p class="subtitle">(Le pedí ayuda a ChatGPT)🌼</p>
 
-<button id="surpriseBtn">Continuar 💙</button>
+  <button id="surpriseBtn">Continuar 💙</button>
 
-<p id="hiddenMessage" class="hidden">
-  Bueno, supongo que ya habrás leído mi carta hasta este punto, pero pido perdón de igualmente por mi manera de afrontar aquello, además de aquello...
-</p>
+  <p id="hiddenMessage" class="hidden">
+    Bueno, supongo que ya habrás leído mi carta hasta este punto, pero pido perdón de igualmente por mi manera de afrontar aquello, además de aquello...
+  </p>
 
-<button id="confessBtn" class="hidden">No voy a negarlo... 💌</button>
+  <button id="confessBtn" class="hidden">No voy a negarlo... 💌</button>
 
-<p id="confession" class="hidden bigMessage">
-  💙 Me gustas mucho y lo sabes, así que quisiera saber si quieres andar conmigo, no como mi amiga, sino como mi pareja/novia 💙
-</p>
+  <p id="confession" class="hidden bigMessage">
+    💙 Me gustas mucho y lo sabes, así que quisiera saber si quieres andar conmigo, no como mi amiga, sino como mi pareja/novia 💙
+  </p>
+</div>
 
 <audio id="bgMusic" loop>
   <source src="https://github.com/WolfFralx/audio-codepen/raw/refs/heads/main/Mar.mp3" type="audio/mp3">
