--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<!-- Contenedor para las flores -->
+<div class="flower-container"></div>
+
+<!-- Contenedor centrado para tu carta -->
 <div class="content">
   <h1 class="title">💛 Feliz Día de las Flores Amarillas 💛</h1>
   <p class="subtitle">Un detalle algo simple, espero te guste🌼</p>
